# iot

./: .gitignore  .travis.yml  LICENSE  README.md
esp8266/: readme.md
esp8266/button/: Makefile
esp8266/button/src/: button.c
esp8266/dummy/: Makefile
esp8266/dummy/src/: FreeRTOSConfig.h  main.c
esp8266/led/: Makefile
esp8266/led/src/: led.c  main.c
esp8266/pairing/: Makefile
esp8266/pairing/src/: FreeRTOSConfig.h  led.h  main.c  pairing.c  pairing.h
scripts/: app.py  pairing.py
server-side/data-collector/: CMakeLists.txt  conanfile.py
server-side/data-collector/src/: CMakeLists.txt  DataHandler.cpp  DataHandler.hpp  MessageHandler.cpp  MessageHandler.hpp  MqttClient.cpp  MqttClient.hpp  Utils.cpp  Utils.hpp  main.cpp
server-side/data-collector/tests/: CMakeLists.txt  DataHandlerTest.cpp  MessageHandlerTest.cpp  run_all_unittests.sh  tests.cmake
server-side/mqtt-client/: CMakeLists.txt  conanfile.py
server-side/mqtt-client/src/: CMakeLists.txt  Utils.hpp  main.cpp
